# rtabmap_drone_example

./: CMakeLists.txt  LICENSE  README.md  package.xml
.devcontainer/: devcontainer.json
.devcontainer/humble/: Dockerfile  devcontainer.json
config/: 1099_iris_rtabmap  4002_gz_x500_depth  config.rviz  gz_bridge_config.yaml  iris  joy_config.yaml  nav2_params.yaml  rcS  rviz.rviz
docker/: Dockerfile
launch/: gazebo.launch  ros2_bridge.launch.py  rviz.launch  slam.launch  spawn_drone.launch
models/OakD-Lite/: LICENSE  model.sdf
models/apt/: model.config  model.sdf
models/room/: model.config  model.sdf
param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
scripts/: rotor_tf.py
src/: offboard_control.cpp  offboard_node.cpp  ros_odometry_to_vehicle_odometry.cpp
urdf/: drone.gazebo  drone.urdf.xacro  realsense-RS200.macro.xacro
worlds/: apt.sdf  apt.world  room.world
